# littytracks

./: .gitignore  Pipfile  Procfile  README.md  craco.config.js  data.dump  db.sqlite3  littytracks.dump  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json
antd-demo-ts/: craco.config.js  package-lock.json  package.json
antd-demo-ts/public/: index.html
antd-demo-ts/src/: App.css  App.tsx  Test.tsx  index.tsx  tmp.js
antd-demo-ts/src/pages/: Profile.tsx  Splash.tsx
app/: =2  datadump.json  db.sqlite3  local_settings.py  schema.py  settings.py  urls.py  wsgi.py
app/app/: schema.py  settings.py
app/tracks/: models.py  schema.py
app/tracks/migrations/: 0001_initial.py  0002_track_posted_by.py  0003_like.py  0005_track_img_url.py  0006_userprofile.py  0007_remove_userprofile_home_address.py  0010_comment_subcomment.py  0011_auto_20200618_2201.py  0011_subcomment_comment.py  (+3 more)
app/users/: schema.py
frontend/: App.less  App.tsx  package-lock.json  package.json
frontend/pages/: Profile.tsx
frontend/public/: index.html
frontend/src/: App.less  App.tsx  index.css  index.tsx
public/: index.html  manifest.json
src/: App.tsx  Test.tsx  index.css  index.tsx  react-app-env.d.ts
src/assets/: trie.js
src/helper/: trie.js
src/pages/: Profile.tsx  Splash.tsx
tracks/: models.py  schema.py  utils.py
tracks/migrations/: 0004_like_user.py  0008_auto_20200616_0011.py  0009_auto_20200616_0014.py  0013_plays.py  0015_userprofile_background_url.py  0016_playcount.py  0017_auto_20200715_0105.py
users/: schema.py
(+83 files in other folders)
